# gemini

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: build.yml  clang-format.yml
code/: CMakeLists.txt
code/include/: Connection.hpp  Exception.hpp  GeminiClient.hpp  Protocol.hpp  Socket.hpp  TslConnection.hpp  TslSocket.hpp  Utils.hpp
code/samples/: cliClient.cpp
code/src/: Connection.cpp  GeminiClient.cpp  Protocol.cpp  Socket.cpp  TslConnection.cpp  TslSocket.cpp  Utils.cpp
tests/: CMakeLists.txt  geminiClient_test.cpp  main_catch.cpp  protocol_test.cpp  utils_test.cpp
